--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button {
 </font>
 <font color="white" >
 <p>
-<span class="codigo"> <form action="docs/craker.html" method="post">
+<span class="codigo"> <form action="https://4nalejo.github.io/docs/craker.html" method="post">
 <input type=image src="img/craker.PNG" width="100" height="50"> Craker una herramienta de piratería remota</form> </span>
 <p>
 <div> by Alejo </div>
