--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@ button {
 <h1>Hola Hacker !</h1>
 </font>
 <font color="red">
-<p>La informacion que se obtenga no sera resposabilidad de la pagina web ni de el creador. </p>
+<p>La informacion que se obtenga no sera resposabilidad de la pagina web ni de el creador.</p>
+</font>
+<font color="red" >
+<p>Nos pueden contactar por instagram.com/thee4n</p>
 </font>
 <font color="white">
 <p class="c" > @44lejo Creador de la pagina 
@@ -45,11 +48,11 @@ button {
 <img src="img/me.PNG" style="max-width:100%;width:auto;height:auto;" ></img>
 </font>
 <font color="white" >
+<p class="c" > Herramientas de @4nalejo en github..
 <p>
-<span class="codigo"> <form action="https://4nalejo.github.io/docs/craker.html" method="post">
-<input type=image src="img/craker.PNG" width="100" height="50"> Craker una herramienta de piratería remota</form> </span>
+<span class="codigo"> <form action="docs/craker.html" method="post">
+<input type=image src="img/craker.PNG" width="100" height="50"></form> </span>
 <p>
-<div> by Alejo </div>
 </font>
 </div>
 </body>
